--- a/java-oops-practice/gcr-codebase/.gitignore
+++ b/java-oops-practice/gcr-codebase/.gitignore
@@ -1,4 +1,6 @@
 /.metadata/
+
+# Eclipse specific files
 .metadata/
 .settings/
 .classpath
@@ -7,7 +9,6 @@
 # Java build output
 bin/
 target/
-.class/
 
 # Logs
 *.log
